# larry

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
larry/: __init__.py  algos.py  color.py  types.py
larry/plugins/: background.py  bash_prompt.py  command.py  gnome_shell.py  gnome_terminal.py  gtk.py  vim.py
src/larry/: __init__.py  __main__.py  algos.py  cli.py  color.py  config.py  filters.py  image.py  io.py  names.py  pool.py  types.py  utils.py
src/larry/filters/: __init__.py  brighten.py  chromefocus.py  colorbalance.py  colorify.py  contrast.py  darken.py  dissolve.py  gradient.py  grayscale.py  hueshift.py  intensify.py  inverse.py  kaleidoscope.py  lighten.py  luminize.py  luminocity.py  neonize.py  none.py  pastelize.py  randbright.py  random.py  reduce.py  sepia.py  shift.py  shuffle.py  sine.py  soften.py  subgradient.py  subtract.py  swap.py  timeofday.py  types.py  utils.py  vga.py  vibrance.py  zipgradient.py
src/larry/plugins/: __init__.py  background.py  cal.py  command.py  gnome_shell.py  gnome_terminal.py  gtk.py  pid.py  vim.py
tests/: __init__.py  fixtures.py  lib.py  test_cli.py  test_color.py  test_config.py  test_filters.py  test_filters_hueshift.py  test_filters_random.py  test_filters_sepia.py  test_filters_sine.py  test_filters_timeofday.py  test_filters_utils.py  test_image.py  test_io.py  test_larry.py  test_plugin_filters.py  test_plugins.py  test_plugins_background.py  test_plugins_cal.py  test_plugins_gnome_shell.py  test_plugins_gnome_terminal.py  test_plugins_gtk.py  test_plugins_pid.py  test_plugins_vim.py  test_pool.py  test_utils.py  utils.py
tools/: buildrgb.py
