[project]
name = "larry"
dynamic = ["version"]
description = "Colorify your desktop with Larry the Cow"
readme = "README.md"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "Pillow>=8.1.0",
    "platformdirs>=3.2.0",
]

[project.urls]
homepage = "https://github.com/enku/larry"
repository = "https://github.com/enku/lary"

[project.optional-dependencies]
gnome = [
    "dbus-python",
    "PyGObject>=3.42.2",
]

[project.scripts]
larry = "larry.cli:main"

[project.entry-points."larry.plugins"]
cal = "larry.plugins.cal:plugin"
command = "larry.plugins.command:plugin"
gnome_background = "larry.plugins.background:plugin"
gnome_shell = "larry.plugins.gnome_shell:plugin"
gnome_terminal = "larry.plugins.gnome_terminal:plugin"
gtk = "larry.plugins.gtk:plugin"
vim = "larry.plugins.vim:plugin"

[project.entry-points."larry.filters"]
brighten = "larry.filters:brighten"
colorify = "larry.filters:colorify"
contrast = "larry.filters:contrast"
gradient = "larry.filters:gradient"
grayscale = "larry.filters:grayscale"
inverse = "larry.filters:inverse"
luminocity = "larry.filters:luminocity"
none = "larry.filters:none"
pastelize = "larry.filters:pastelize"
randbright = "larry.filters:randbright"
random = "larry.filters:random"
reduce = "larry.filters:reduce"
shift = "larry.filters:shift"
shuffle = "larry.filters:shuffle"
subgradient = "larry.filters:subgradient"
subtract = "larry.filters:subtract"
swap = "larry.filters:swap"
vga = "larry.filters:vga"
zipgradient = "larry.filters:zipgradient"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "scm" }
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "build>=0.8.0",
    "coverage>=6.4.2",
    "mypy>=0.971",
    "pip>=22.2.2",
    "pylint>=2.14.5",
    "types-Pillow>=9.4.0.13",
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.isort]
profile = "black"
