[project]
name = "larry"
dynamic = ["version"]
description = "Colorify your desktop with Larry the Cow"
readme = "README.md"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
    "Pillow>=8.1.0",
    "platformdirs>=3.2.0",
    "scipy>=1.15.1",
    "scikit-learn>=1.6.1",
]

[project.urls]
homepage = "https://github.com/enku/larry"
repository = "https://github.com/enku/lary"

[project.optional-dependencies]
gnome = [
    "dbus-python",
    "PyGObject>=3.42.2",
]

[project.scripts]
larry = "larry.__main__:main"

[project.entry-points."larry.plugins"]
cal = "larry.plugins.cal:plugin"
command = "larry.plugins.command:plugin"
gnome_background = "larry.plugins.background:plugin"
gnome_shell = "larry.plugins.gnome_shell:plugin"
gnome_terminal = "larry.plugins.gnome_terminal:plugin"
gtk = "larry.plugins.gtk:plugin"
vim = "larry.plugins.vim:plugin"

[project.entry-points."larry.filters"]
brighten = "larry.filters.brighten:cfilter"
chromefocus = "larry.filters.chromefocus:cfilter"
colorbalance = "larry.filters.colorbalance:cfilter"
colorify = "larry.filters.colorify:cfilter"
contrast = "larry.filters.contrast:cfilter"
darken = "larry.filters.darken:cfilter"
dissolve = "larry.filters.dissolve:cfilter"
gradient = "larry.filters.gradient:cfilter"
grayscale = "larry.filters.grayscale:cfilter"
hueshift = "larry.filters.hueshift:cfilter"
intensify = "larry.filters.intensify:cfilter"
inverse = "larry.filters.inverse:cfilter"
kaleidoscope = "larry.filters.kaleidoscope:cfilter"
lighten = "larry.filters.lighten:cfilter"
luminocity = "larry.filters.luminocity:cfilter"
luminize = "larry.filters.luminize:cfilter"
neonize = "larry.filters.neonize:cfilter"
none = "larry.filters.none:cfilter"
pastelize = "larry.filters.pastelize:cfilter"
randbright = "larry.filters.randbright:cfilter"
random = "larry.filters.random:cfilter"
reduce = "larry.filters.reduce:cfilter"
sepia = "larry.filters.sepia:cfilter"
shift = "larry.filters.shift:cfilter"
shuffle = "larry.filters.shuffle:cfilter"
sine = "larry.filters.sine:cfilter"
soften = "larry.filters.soften:cfilter"
subgradient = "larry.filters.subgradient:cfilter"
subtract = "larry.filters.subtract:cfilter"
swap = "larry.filters.swap:cfilter"
timeofday = "larry.filters.timeofday:cfilter"
vga = "larry.filters.vga:cfilter"
vibrance = "larry.filters.vibrance:cfilter"
zipgradient = "larry.filters.zipgradient:cfilter"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pylint.FORMAT]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["larry"]
omit = ["src/larry/__main__.py"]


[tool.pdm]
version = { source = "scm" }
[dependency-groups]
dev = [
    "black>=22.6.0",
    "build>=0.8.0",
    "coverage>=6.4.2",
    "mypy>=0.971",
    "pylint>=2.14.5",
    "types-Pillow>=9.4.0.13",
    "scipy-stubs>=1.15.1.0",
    "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git",
]

[tool.black]
skip_magic_trailing_comma = true
