[metadata]
name = larry
url = https://github.com/enku/larry
author = Albert Hopkins
author_email = marduk@letterboxes.org
description = Colorify your desktop with Larry the Cow
license = MIT
long_description = file: README.md

[options]
zip_safe = True
package_dir =
    = src
packages =
    larry
    larry.plugins
python_requires >=3.6
install_requires =
    numpy~=1.20.1
    Pillow~=8.1.0

include_package_data = True

[options.extras_require]
gnome = dbus-python

[options.entry_points]
console_scripts =
    larry = larry.cli:main
larry.plugins =
    command = larry.plugins.command:plugin
    gnome_background = larry.plugins.background:plugin
    gnome_shell = larry.plugins.gnome_shell:plugin
    gnome_terminal = larry.plugins.gnome_terminal:plugin
    gtk = larry.plugins.gtk:plugin
    vim = larry.plugins.vim:plugin
larry.algos =
    brighten = larry.algos:brighten
    contrast = larry.algos:contrast
    gradient = larry.algos:gradient_algo
    grayscale = larry.algos:grayscale
    inverse = larry.algos:inverse_algo
    luminocity = larry.algos:luminocity_algo
    noop = larry.algos:noop
    pastelize = larry.algos:pastelize
    randbright = larry.algos:randbright
    random = larry.algos:random_algo
    reduce = larry.algos:reduce
    shift = larry.algos:shift
    shuffle = larry.algos:shuffle
    subtract = larry.algos:subtract
    swap = larry.algos:swap
    vga = larry.algos:vga
    zipgradient = larry.algos:zipgradient_algo

[pylint.FORMAT]
max-line-length = 88
