[metadata]
name = larry
url = https://github.com/enku/larry
author = Albert Hopkins
author_email = marduk@letterboxes.org
description = Colorify your desktop with Larry the Cow
license = MIT
long_description = file: README.md

[options]
zip_safe = True
package_dir =
    = src
packages =
    larry
    larry.plugins
python_requires >=3.6
install_requires =
    numpy~=1.20.1
    Pillow~=8.1.0

include_package_data = True

[options.extras_require]
gnome = dbus-python

[options.entry_points]
console_scripts =
    larry = larry.cli:main
larry.plugins =
    command = larry.plugins.command:plugin
    gnome_background = larry.plugins.background:plugin
    gnome_shell = larry.plugins.gnome_shell:plugin
    gnome_terminal = larry.plugins.gnome_terminal:plugin
    gtk = larry.plugins.gtk:plugin
    vim = larry.plugins.vim:plugin
larry.filters =
    brighten = larry.filters:brighten
    contrast = larry.filters:contrast
    gradient = larry.filters:gradient
    grayscale = larry.filters:grayscale
    inverse = larry.filters:inverse
    luminocity = larry.filters:luminocity
    none = larry.filters:none
    pastelize = larry.filters:pastelize
    randbright = larry.filters:randbright
    random = larry.filters:random
    reduce = larry.filters:reduce
    shift = larry.filters:shift
    shuffle = larry.filters:shuffle
    subtract = larry.filters:subtract
    swap = larry.filters:swap
    vga = larry.filters:vga
    zipgradient = larry.filters:zipgradient

[pylint.FORMAT]
max-line-length = 88
